<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/svRegister"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".RegistrationActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green_blue"
            android:text="@string/profile"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tieFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fullName"
                android:textSize="20sp"
                android:background="@color/grey_blue"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tieEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint"
                android:textSize="20sp"
                android:background="@color/grey_blue"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiePassword1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Password_hint"
                android:textSize="20sp"
                android:background="@color/grey_blue"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiePassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Re_Password"
            android:textSize="20sp"

            android:background="@color/grey_blue"/>
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/apple"
            android:text="@string/Gender"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold" />
        <RadioGroup
            android:id="@+id/rgGender"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Male"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/rbFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Female"
                android:textStyle="bold" />
        </RadioGroup>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/apple"
            android:text="@string/Age"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <!-- Step size 0 means continuous -->
        <com.google.android.material.slider.Slider
            android:id="@+id/sldAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="Age"
            android:stepSize="1"
            android:value="30"
            android:valueFrom="10"
            android:valueTo="100" />

        <TextView
            android:id="@+id/sldValAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Age: 30"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#F2E797"
            android:text="@string/Weight"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <com.google.android.material.slider.Slider
            android:id="@+id/sldWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="Weight"
            android:stepSize="1"
            android:value="70"
            android:valueFrom="30"
            android:valueTo="200" />
      <TextView
        android:id="@+id/sldValWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Weight(kg):70"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#F2E797"
            android:text="@string/Height"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />
        <com.google.android.material.slider.Slider
            android:id="@+id/sldHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stepSize="1"
            android:value="100"
            android:valueFrom="50"
            android:valueTo="300"
            android:contentDescription="Height"/>
        <TextView
            android:id="@+id/sldValHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Height(cm):100"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="center"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegister"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/register"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_gravity="center"/>
    </LinearLayout>

</ScrollView>